--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 			<div class="header__bottom__containers">
 				<nav id="primary-menu" class="header__bottom__menu list--reset">
 					<ul>
-						<li><a href="#header">Главная</a></li>
+						<li><a href="#hero">Главная</a></li>
 						<li><a href="#catalog">Каталог</a></li>
 						<li><a href="#attractions">Фотогалерея</a></li>
 						<li><a href="#popular">Популярные туры</a></li>
